# PracticeMakePerfect

./: .gitignore  Makefile.template  README.md  README.md~  echofile.txt  loading_bar.c  test_int_return_without_lval.c
C_Template/: c11_template.c
Gprof/: test1.c
IO/: _printf.c  _scanf.c  getputchar.c  minprintf.c  va_list_imp_minprt.c
Makefile/: Makefile  command.rule
Map_IO/: wbuf_imp.c
MySQL/: Makefile  create_db.c  crt_insr_table.c  retr_data.c  show_client_ver.c
Perf/: perf_record_example.c  perf_record_example~  perf_state_example.c  perf_top_example.c  test_gnuplot_data.txt
SIMD/: _m128d.c  _m256d.c  _mm256_mul_pd.c  _mm_shuffle_ps.c  pi.c  test_SIMD.c
Xwin/: Makefile  xwindow.c
c11_atomic/: Makefile  counter.c  counter_atomic.c
cmake/: README.md
cmake/ex1/: CMakeLists.txt  main.c  script_cmake.txt
compile_flow/: Makefile  hello.c  hello.i  hello.s
cpp/: Makefile  constexpr.cpp  explicit  explicit.cpp
exec/: ls_exec.c
file/: cat_imp.c  cp_imp.c  cp_org.txt  fpf.txt  fprintf.c  fscanf.c  test1.txt  test_echo.txt
fork/: multp.c
free/: free_test.c
func_pointer/: func_p.c  func_p0.c  struct_pt.c
gcc_extension/: cvt_macro2func.c  gcc_ext.c
gdb_test/: Makefile  core.10771  gdb_test.c
getopt/: arg_getopt.c  arg_getopt_long.c
gunplot/: gp_popgrowth.gp  popgrowth.txt
kernel_extend/: Makefile  kernel_macro.c
lib_hook/: README.md  dl_proc1  dl_proc1.c  dl_proc2.c  dl_proc3.c  file1.c  file2.c  proc1  proc1.c  proc1_dl  proc2.c
macro/: _#.c  variadic_macro.c
makelib/: README.md  dlltest.c  hello.c  libmylib.so1.0.0  mylib.h  (+2 more)
(+110 files in other folders)
